src/index.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=Playfair+Display:ital,wght@0,400;1,400&display=swap');
@import "tailwindcss";

* {
  box-sizing: border-box;
}

body {
  margin: 0;
  background: #080808;
  color: #e8e8e8;
  font-family: 'Inter', sans-serif;
  -webkit-font-smoothing: antialiased;
}

#root {
  width: 100%;
  min-height: 100svh;
}

::-webkit-scrollbar {
  width: 0px;
}

